--- a/app/lib/app_web/templates/course/index.html.eex
+++ b/app/lib/app_web/templates/course/index.html.eex
@@ -1,17 +1,17 @@
-<div class="uk-grid-column-medium uk-grid-row-medium uk-child-width-1-3@s uk-grid-match" uk-grid>
+<div>
     <%= if length(@courses) == 0 do %>
         <span>Looks like you don't have any courses yet! Create one to get started.</span>
     <% end %>
     <%= for {course, i} <- Enum.with_index(@courses) do %>
     <div>
         <a href="<%= Routes.course_path(@conn, :show, course) %>">
-            <div class="uk-card uk-card-small uk-card-default uk-card-hover color-<%= 1 + rem course.number + 1, 20 %>"">
-                <div class="uk-card-header">
-                    <div class="uk-width-expand">
-                        <h3 class="uk-card-title uk-margin-remove-bottom">
+            <div class="color-<%= 1 + rem course.number + 1, 20 %>"">
+                <div>
+                    <div>
+                        <h3>
                         <%= course.department %><%= to_string(course.number) %>
                         </h3>
-                        <p class="uk-text-meta uk-margin-remove-top uk-margin-remove-bottom">
+                        <p>
                         <%= course.name %> &mdash;
                         <%= Map.get(@semesters, :"#{course.semester_id}") %>
                         </p>
@@ -23,6 +23,6 @@
     <% end %>
 </div>
 
-<section class="container uk-padding-small uk-padding-remove-left">
-    <%= link "New Course", to: Routes.course_path(@conn, :new), class: "uk-button uk-button-secondary" %>
+<section class="container">
+    <%= link "New Course", to: Routes.course_path(@conn, :new), class: "" %>
 </section>
