--- a/app/lib/app_web/templates/course/show.html.eex
+++ b/app/lib/app_web/templates/course/show.html.eex
@@ -1,12 +1,12 @@
 <h1><%= @course.department %> <%= @course.number %>: <%= @course.name %></h1>
 
-<div class="uk-grid-medium uk-child-width-1-3@s" uk-grid>
+<div>
   <div>
-  <div class="uk-card uk-card-small uk-card-default uk-card-hover">
-    <div class="uk-card-header">
-      <h3 class="uk-card-title uk-margin-remove-bottom">Course Details</h3>
+  <div>
+    <div>
+      <h3>Course Details</h3>
     </div>
-    <div class="uk-card-body">
+    <div>
       <ul>
         <li>
           <strong>Student viewing:</strong>
@@ -33,8 +33,8 @@
 
       </ul>
     </div>
-    <div class="uk-card-footer">
-      <div class="details uk-width-expand">
+    <div>
+      <div class="details">
         <%= link "Edit Details", to: Routes.course_path(@conn, :edit, @course) %>
         <%= if @role == "owner" do %>
         |
@@ -45,17 +45,17 @@
   </div>
   </div>
 <div>
-<div class="uk-card uk-card-small uk-card-default uk-card-hover">
-    <div class="uk-card-header">
-      <h3 class="uk-card-title uk-margin-remove-bottom">Administration</h3>
+<div>
+    <div>
+      <h3>Administration</h3>
     </div>
-    <div class="uk-card-body">
+    <div>
       Topics
       <ul>
         <li><%= link "Create Topic", to: Routes.course_topic_path(@conn, :new, @course) %></li>
       </ul>
       Course Roles (Professors/TAs)
-      <ul class="uk-margin-remove-top">
+      <ul>
         <li><%= link "View Existing Course Roles", to: Routes.course_course__role_path(@conn, :index, @course) %></li>
         <%= if @role == "owner" do %>
           <li><%= link "Add New Course Roles", to: Routes.course_course__role_path(@conn, :bulk_new, @course) %></li>
@@ -66,12 +66,12 @@
 </div>
 
 <div>
-  <div class="uk-card uk-card-small uk-card-default uk-card-hover">
-    <div class="uk-card-header">
-      <h3 class="uk-card-title uk-margin-remove-bottom">Sections in <%= @course.name %></h3>
+  <div>
+    <div>
+      <h3>Sections in <%= @course.name %></h3>
     </div>
-    <div class="uk-card-body">
-      <table class="uk-table  uk-table-small">
+    <div>
+      <table>
         <thead>
           <tr>
             <th>Title</th>
@@ -97,8 +97,8 @@
         </tbody>
       </table>
     </div>
-    <div class="uk-card-footer">
-      <div class="details uk-width-expand">
+    <div>
+      <div class="details">
         <%= link "Create Section", to: Routes.course_section_path(@conn, :new, @course) %>
       </div>
     </div>
