--- a/app/lib/app_web/templates/section/form.html.eex
+++ b/app/lib/app_web/templates/section/form.html.eex
@@ -1,5 +1,5 @@
 
-<div class="uk-margin">
+<div>
   Using the form below, you can create a new section of a course
   that you previously created. If you add the CRN (course registration
   number?)
@@ -8,32 +8,32 @@
   <a href="https://courses.yale.edu/">https://courses.yale.edu/</a> or <a href="https://portal.som.yale.edu/academics-student-life/courses">https://portal.som.yale.edu/academics-student-life/courses</a>.
 </div>
 
-<%= form_for @changeset, @action, [class: "uk-form-stacked"], fn f -> %>
+<%= form_for @changeset, @action, [class: ""], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
-<div class="uk-margin">
-  <%= label f, :title, class: "uk-form-label"%>
-  <div class="uk-form-controls">
-    <%= text_input f, :title, class: "uk-input"%>
+<div>
+  <%= label f, :title, class: ""%>
+  <div>
+    <%= text_input f, :title, class: ""%>
     <%= error_tag f, :title %>
   </div>
 </div>
 
-<div class="uk-margin">
-  <%= label f, :crn, class: "uk-form-label"%>
-  <div class="uk-form-controls">
-    <%= text_input f, :crn, class: "uk-input"%>
+<div>
+  <%= label f, :crn, class: ""%>
+  <div>
+    <%= text_input f, :crn, class: ""%>
     <%= error_tag f, :crn %>
   </div>
 </div>
 
   <%= hidden_input f, :course_id, value: @course.id %>
-<div class="uk-margin">
-    <%= submit "Save", class: "uk-button-secondary uk-button" %>
+<div>
+    <%= submit "Save", class: "" %>
 </div>
 
 <% end %>
