--- a/app/lib/app_web/templates/submission/form.html.eex
+++ b/app/lib/app_web/templates/submission/form.html.eex
@@ -5,39 +5,39 @@
     </div>
   <% end %>
 
-<div class="uk-margin">
-  <%= label f, :title, class: "uk-form-label" %>
-  <div class="uk-form-controls">
-      <%= text_input f, :title, class: "uk-input" %>
+<div>
+  <%= label f, :title, class: "" %>
+  <div>
+      <%= text_input f, :title, class: "" %>
       <%= error_tag f, :title %>
   </div>
 </div>
 
-<div class="uk-margin">
-  <%= label f, :description, class: "uk-form-label" %>
-  <div class="uk-form-controls">
-      <%= textarea f, :description, class: "uk-textarea" %>
+<div>
+  <%= label f, :description, class: "" %>
+  <div>
+      <%= textarea f, :description, class: "" %>
       <%= error_tag f, :description %>
   </div>
 </div>
 
-<div class="uk-margin">
-  <%= label f, :image_url, class: "uk-form-label" %>
-  <div class="uk-form-controls">
-  <%= text_input f, :image_url, class: "uk-input" %>
+<div>
+  <%= label f, :image_url, class: "" %>
+  <div>
+  <%= text_input f, :image_url, class: "" %>
   <%= error_tag f, :image_url %>
   </div>
 </div>
 
 <%= if @topic.anonymous do %>
 <% else %>
-  <div class="uk-alert-warning" uk-alert>
-    <a class="uk-alert-close" uk-close></a>
+  <div>
+    <a></a>
     <p>Note: this topic is not anonymous; your name will be visible as the author of this submission.</p>
   </div>
 <% end %>
 
-<div class="uk-margin">
-    <%= submit "Save", class: "uk-button-secondary uk-button" %>
+<div>
+    <%= submit "Save", class: "" %>
 </div>
 <% end %>
