--- a/app/lib/app_web/templates/submission/show.html.eex
+++ b/app/lib/app_web/templates/submission/show.html.eex
@@ -1,6 +1,6 @@
-<div class="uk-margin-bottom">
-    <div class="uk-padding-small submission-body">
-        <h1 class="uk-heading-divider"><%= @submission.title %></h1>
+<div>
+    <div class="submission-body">
+        <h1><%= @submission.title %></h1>
         <%= if !is_nil(@submission.image_url) do %>
             <img src="<%= @submission.image_url %>">
         <% end %>
@@ -13,10 +13,10 @@
             <% end %>
             <%= if @topic.show_submission_ratings do %>
             <%= cond do %>
-            <%= @submission.rating_count > 0 -> %>
+            <%= @submission.rating_count> 0 -> %>
             <%= stars @submission.avg_rating %>
             (<%= @submission.rating_count |> Integer.to_string %>
-             <%= if @submission.rating_count > 1 do %>ratings<% else %>rating<% end %>)
+             <%= if @submission.rating_count> 1 do %>ratings<% else %>rating<% end %>)
             <% @topic.allow_submission_voting -> %>
                 No ratings yet.
             <% true -> %>
@@ -43,11 +43,11 @@
     Comments
     <span class="comment-count">(<%= length(@comments) |> Integer.to_string %>)</span>
     </h2>
-    <ul class="uk-comment-list">
+    <ul>
         <%= for {comment, i} <- Enum.with_index(@comments) do %>
             <li class="comment">
-                <article class="uk-comment uk-visible-toggle speech-bubble" tabindex="-1">
-                    <div class="uk-comment-body">
+                <article class="speech-bubble" tabindex="-1">
+                    <div>
                         <p>
                             <%= comment.description %>
                         </p>
@@ -98,7 +98,7 @@ end %>
 else
 "Change your rating"
 end %>
-<%= form_for @rating_changeset, action, [class: "uk-form-stacked"], fn f -> %>
+<%= form_for @rating_changeset, action, [class: ""], fn f -> %>
   <%= if @rating_changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -109,15 +109,15 @@ end %>
     <input name="_method" type="hidden" value="put">
   <% end %>
 
-    <div class="uk-margin">
+    <div>
       <%= label f, :score, message %>
       <% default_value = if !is_nil(@my_rating) do
        @my_rating.score
        else
        nil
        end %>
-        <div class="uk-form-controls">
-          <%= select f, :score, 1..5 , value: default_value, class: "uk-select", onchange: "this.form.submit()" %>
+        <div>
+          <%= select f, :score, 1..5 , value: default_value, class: "", onchange: "this.form.submit()" %>
           <%= error_tag f, :score %>
         </div>
     </div>
@@ -129,44 +129,44 @@ end %>
 <%= if @topic.allow_submission_comments do %>
 <div>
     <a name="newcomment"></a>
-    <%= form_for @comment_changeset, Routes.submission_comment_path(@conn, :create, @submission.id), [class: "uk-form-stacked"], fn f -> %>
+    <%= form_for @comment_changeset, Routes.submission_comment_path(@conn, :create, @submission.id), [class: ""], fn f -> %>
     <%= if @comment_changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
     <% end %>
 
-    <div class="uk-margin">
-        <div class="uk-form-controls">
-          <%= hidden_input f, :title, value: "Sample", class: "uk-input" %>
+    <div>
+        <div>
+          <%= hidden_input f, :title, value: "Sample", class: "" %>
           <%= error_tag f, :title %>
         </div>
     </div>
 
-    <div class="uk-margin">
+    <div>
       <%= label f, :description, "Add a comment" %>
-        <div class="uk-form-controls">
-          <%= textarea f, :description, class: "uk-textarea", rows: "6" %>
+        <div>
+          <%= textarea f, :description, class: "", rows: "6" %>
           <%= error_tag f, :description %>
         </div>
     </div>
 
     <%= if @topic.anonymous do %>
     <% else %>
-      <div class="uk-alert-warning" uk-alert>
-        <a class="uk-alert-close" uk-close></a>
+      <div>
+        <a></a>
         <p>Note: this topic is not anonymous; your name will be visible as the author of this comment.</p>
       </div>
     <% end %>
 
-    <div class="uk-margin">
-        <%= submit "Save", class: "uk-button-secondary uk-button" %>
+    <div>
+        <%= submit "Save", class: "" %>
     </div>
 
 <% end %>
 </div>
 <% end %>
 
-<div class="uk-position-fixed uk-position-z-index absolute uk-dark uk-position-bottom-right">
-<a href="#newcomment" class="add uk-box-shadow-small uk-box-shadow-hover-large" uk-marker></a>
+<div class="absolute">
+<a href="#newcomment" class="add"></a>
 </div>
